<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

            <ImageView
                    android:layout_width="133dp"
                    android:layout_height="109dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/weather"
                    android:contentDescription="@string/icon_description"/>

            <TextView
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

            <TextView
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_developer_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

            <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_company_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary">

        </View>

    </LinearLayout>

</androidx.cardview.widget.CardView>