<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="50dp"
        android:layout_height="90dp"
        app:cardElevation="0dp"
        android:id="@+id/hour_weather_item_id">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/hwi_layout_id">


        <TextView
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:text="@string/hwi_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hwi_temp_id"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="@dimen/margin_tiny"/>

        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/rain"
                android:id="@+id/hwi_stateIcon_id"
                app:layout_constraintStart_toStartOf="@+id/hwi_temp_id"
                app:layout_constraintEnd_toEndOf="@+id/hwi_temp_id"
                android:layout_marginTop="@dimen/margin_tiny"
                app:layout_constraintTop_toBottomOf="@+id/hwi_temp_id"
                android:contentDescription="@string/state_icon_description"/>

        <TextView
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:text="@string/hwi_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hwi_time_id"
                app:layout_constraintEnd_toEndOf="@+id/hwi_stateIcon_id"
                app:layout_constraintStart_toStartOf="@+id/hwi_stateIcon_id"
                android:layout_marginTop="@dimen/margin_tiny"
                app:layout_constraintTop_toBottomOf="@+id/hwi_stateIcon_id"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>